# CRUX

./: .gitignore  LICENSE  README.md  keras_model0.h5  keras_model1.h5  keras_model2.h5  keras_model3.h5  keras_model4.h5  log.txt  peaklist.py  trans2json.py  us_odp.py
NGAE-XRD/: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
NGAE-XRD/.github/workflows/: ci.yml
NGAE-XRD/configs/: pipeline.example.yaml
NGAE-XRD/docs/: WORKFLOW.md
NGAE-XRD/scripts/: run_pipeline.py
NGAE-XRD/src/ngae_xrd/: __init__.py  cli.py  config.py
NGAE-XRD/src/ngae_xrd/evaluation/: baselines.py  metrics.py
NGAE-XRD/src/ngae_xrd/extraction/: lsd_peaks.py
NGAE-XRD/src/ngae_xrd/io/: peak_io.py
NGAE-XRD/src/ngae_xrd/models/: autoencoder.py  inference.py  training.py
NGAE-XRD/src/ngae_xrd/pipeline/: run_pipeline.py
NGAE-XRD/src/ngae_xrd/simulation/: gaussian.py
NGAE-XRD/src/ngae_xrd/transforms/: recurrence.py
NGAE-XRD/tests/: test_smoke.py
crux_ie/: datacard.py  datacard_test.py  instrument.py  modelcard.py  performance.py  ranking.py  run.sh  source.py  utils.py
crux_kb/: run.sh  taskcard.py  testcard.py
data/: MnO2_Unmilled_Air_InitialScan.json  NC_Empyrean.prm  data_card.json  result.txt
neo4j/: 1_LOAD_all_cards_nodes.cypher  2_CREATE_all_relationships.cypher  OUTPUT_RDF.cypher  clear_all.cypher
ontology/: cards_schema.xmind  crux.owl  crux.properties
peak_finding/: Processing.ipynb  peaklist.py
peak_finding_notebook/: Processing_notebook.ipynb
testdata/: list.txt  ncctlist.txt  ncmolist.txt  p_gsas2.txt  pk_peakutils.txt  (+13 more)
(+562 files in other folders)
